Alignment issue fix in Mobile Version

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -33,7 +34,14 @@
     
    
         <img src="img/fun-bus.jpg" alt="Header Image" class="header-image" />
-        <section class="content-section">
+        <div class="text-content-into">
+            <h2>Welcome To Fun Bus!</h2>
+            <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>                 
+          </div>              
+        </section> 
+
+        <section class="content-section">            
+
           <div class="text-content">
             <h2>Let's Go!</h2>
             <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
