Stretch Done by Creating Parametric mixins animation on Fun Bus title

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container home">
 
     <header>
-        <h1>Fun Bus</h1>
+        <h1 class="pg-title">Fun Bus</h1>
         <nav>
           <a href="#">Home</a>
           <a href="#">About US</a>
